# MintSpeak

./: .gitignore  README.md  env.example
.github/workflows/: ci.yml
backend/: main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: test_main.py
frontend/: package-lock.json  package.json
scripts/: dev.sh  setup.sh
